--- a/css/master.css
+++ b/css/master.css
@@ -13,7 +13,7 @@
   }
 
   body {
-    background-color: beige;
+    background-color: #FFF5EE;
     /*set the background color here */
     color: black;/* set the text color to black here */
     /* set the font here */
@@ -33,7 +33,7 @@
    }
 
   h2 {
-    color: blue;
+    color: #98AFC7;
     margin-bottom: 0.5rem;
     margin-top: 3rem;
    }
@@ -44,7 +44,7 @@
   }
 
   h4 {
-    backgrouud-color: grey;
+    backgrouud-color: #E8E8E6;
     margin-bottom: 1rem;
     margin-top: 0.5rem;
   }
